<resources>
    <string name="app_name">Challenge Your Health</string>
    <string name="food_title">Food Journal</string>
    <string name="physical_activity_title">Physical Activity</string>
    <string name="weekly_physical_activity_title">Weekly Physical Activity</string>
    <string name="challenges_title">Challenges</string>
    <string name="goals_measurement_title">Goals &amp; Measurements</string>
    <string name="centimeters">cm</string>
    <string name="kilos">kg</string>
    <string name="kcal"><br /> kcal</string>
    <string name="minutes">mins</string>
    <string name="activity_mins"><br/> mins</string>
    <string name="info_btn">Information</string>
    <string name="info_dialog_btn">Got it!</string>
    <string name="delete_btn">Delete</string>
    <string name="delete_dialog_msg">Are you sure to want to delete?</string>
    <string name="delete_dialog_submsg">This action cannot be reversed.</string>
    <string name="delete_challenge_dialog_submsg">You are deleting the challenge from the database, this action cannot be reversed.
                                                    \n\nIf you want to finish the challenge, choose the option from the menu in the challenge screen.</string>
    <string name="yes">Yes</string>
    <string name="ok_btn">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save_btn">Save</string>
    <string name="goal_input_title">Goal:</string>
    <string name="goal_weight_input_title">Goal weight (kg):</string>
    <string name="daily_kcal_input_title">Daily calories:</string>
    <string name="weeekly_activity_input_title">Weekly activity (mins):</string>
    <string name="weight_input_field">Weight (kg):</string>
    <string name="height_input_field">Height (cm):</string>
    <string name="age_input_field">Age:</string>
    <string name="gender_input_field">Gender:</string>
    <string name="activity_input_field">Activity:</string>
    <string name="date_input_title">Date:</string>
    <string name="name_input_title">Name:</string>
    <string name="duration_input_title">Duration:</string>
    <string name="intensity_input_title">Intensity:</string>
    <string name="challenge_name_input_title">Challenge name:</string>
    <string name="challenge_description_input_title">Challenge description:</string>
    <string name="frequency_input_title">Frequency:</string>
    <string name="size_input_title">Size (g):</string>
    <string name="calories_input_title">Calories (per 100g):</string>
    <string name="carbs_input_title">Carbs (per 100g):</string>
    <string name="protein_input_title">Protein (per 100g):</string>
    <string name="fat_input_title">Fat (per 100g):</string>
    <string name="saturated_fat_input_title">Saturated Fat (per 100g):</string>
    <string name="trans_fat_input_title">Trans-fat (per 100g):</string>
    <string name="sugar_input_title">Sugar (per 100g):</string>
    <string name="salt_input_title">Salt (per 100g):</string>
    <string name="fruit_or_veggie_input_title">Fruit or veggie?</string>
    <string name="input_hint">Type here</string>
    <string name="date_input_hint">Choose date</string>
    <string name="duration_input_hint">Choose duration</string>
    <string name="challenge_started_msg">Challenge started!</string>
    <string name="insert_error_msg">Please provide valid values.</string>
    <string name="food_insert_error_msg">Please provide at least name and grams.</string>
    <string name="challenge_insert_error_msg">Please provide at least name and frequency.</string>
    <string name="error_msg">Error, please try again.</string>
    <string name="edit_success_msg">Edit successful!</string>
    <string name="delete_success_msg">Delete successful!</string>
    <string name="save_success_msg">Save successful!</string>
    <string name="goal_title">Goal</string>
    <string name="weight_title">Weight</string>
    <string name="bmi_title">BMI Calculator</string>
    <string name="bmr_tee_title">BMR &amp; TEE Calculator</string>
    <string name="calculate_btn">Calculate</string>
    <string name="bmi_result_intro">Your BMI is <br /></string>
    <string name="bmi_ranges">
        Healthy weight BMI range: 18.5 – 24.99\n\nUnderweight: below 18.5\n\nOverweight: 24.99 – 30\n\nObese: over 30
    </string>
    <string name="bmi_info">Remember: BMI is only an estimate as it doesn\'t differentiate between fat and muscle!</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="bmr_result_intro">Your BMR is <br /></string>
    <string name="tee_result_intro">Your TEE is <br /></string>
    <string name="bmr_tee_info">
        Basal metabolic rate (BMR) specifies the energy we use for life functions such as brain functions, work of heart and lungs,
        cell replacement, digestion of food and nutrients.
        \n
        \nTotal Energy Expenditure (TEE) is how much calories we burn each day,
        combining BMR and physical activity. TEE represents how many calories we should consume each day, while maintaining the same weight.
        \n
        \nThe three physical activity levels:
        \n- Light - people who do not engage in physical activities often and their work is not physical.
        \n- Moderate - people who have more physical jobs or spend their free time in an active way, for example moderate activity of 1h/day.
        \n- Vigorous - people with physical jobs and vigorous daily activities.
    </string>
    <string name="goal_weight">Goal weight</string>
    <string name="weekly_activity_mins">Weekly activity</string>
    <string name="daily_kcal_no_tee_info">You can count your BMR and TEE to find out how many calories you should be consuming daily.</string>
    <string name="daily_kcal_based_on_tee_info">Based on your TEE result.</string>
    <string name="daily_kcal_tee_preferences_present">Your latest TEE result is <br /></string>
    <string name="activity_mins_info">Recommended minimum is 150 mins.</string>
    <string name="goal_preferences_saved_msg">Goal set!</string>
    <string name="goal_info">It is important to consume an appropriate number of calories – energy intake should be more and less the same as calorie expenditure,
        in order to maintain a healthy weight. BMI can be used as an indication and estimation of a healthy weight.
        \n\nWhen losing or gaining weight, it is important to adjust the daily calorie intake.
        The recommended weight loss per week is around 0.5 – 1 kg. To lose weight, you need to achieve a calorie deficit, so eat less calories than your body burns.
        There is around 7000 calories in one kilogram of fat. So you need to adjust the calorie intake by 3500 – 7000 calories per week or 500 – 1000 calories per day from the Total Energy Expenditure.
        The same is for weight gain, except that you need to eat more calories than you burn.
        \n\nIn case of weekly physical activity, for an adult, the recommended minimum is 150 minutes of moderate intensity.
        Physical activity means moving in any way that is using up energy, for example walking, running, cycling, dancing, yoga etc.
        The best way to keep active is to incorporate more movement into the daily life, for example, using stairs instead of lift, walking to work or doing more household work.
        It is important to adjust the exercises to our fitness level. Moderate intense activity is a type of activity that increases heart rate and makes it a bit harder to breath and talk.
        It is also important to work on muscles 2 times per week. Adults over 65 should engage in physical activities that are allowed based on their condition.
        The recommended goal of physical activity per day for children is at least 60 minutes of moderate activity.
    </string>
    <string name="no_weights_in_db">No weights saved</string>
    <string name="add_weight">Add weight</string>
    <string name="edit_weight">Edit Weight</string>
    <string name="weight_empty_view_subtitle">Add weight measurement by clicking the add button</string>
    <string name="weight_empty_view_title">No records yet</string>
    <string name="challenges_active">Active</string>
    <string name="challenges_completed">Finished</string>
    <string name="days_complete"><br /> days completed</string>
    <string name="weeks_complete"><br /> weeks completed</string>
    <string name="add_challenge_title">Add new challenge</string>
    <string name="challenge_name">Challenge Name</string>
    <string name="challenge_description">Challenge Description</string>
    <string name="challenge_list_text">You can choose a challenge from the list:</string>
    <string name="start_challenge">Start challenge</string>
    <string name="active_challenges_empty_view_subtitle">Start a challenge by clicking the add button.</string>
    <string name="active_challenges_empty_view_title">You have not started any challenges yet.</string>
    <string name="completed_challenges_empty_view_subtitle">You can mark a challenge as finished by choosing the option in the menu of in the challenge details view.</string>
    <string name="completed_challenges_empty_view_title">You have not finished any challenges yet.</string>
    <string name="completed_days">Completed days: <br /></string>
    <string name="completed_weeks">Completed weeks: <br /></string>
    <string name="do_you_want_to_complete">Do you want to finish \"</string>
    <string name="challenge_question_mark">\" challenge?</string>
    <string name="edit_challenge_title">Edit challenge</string>
    <string name="options_menu_challenge_information">Challenge information</string>
    <string name="options_menu_edit_challenge">Edit challenge</string>
    <string name="options_menu_finish_challenge">Finish challenge</string>
    <string name="options_menu_show_food_journal">Show food journal</string>
    <string name="complete_challenge_dialog_title">Complete Challenge</string>
    <string name="challenge_already_was_completed">You have already finished this challenge before.</string>
    <string name="challenge_info">Here will be additional information about the challenge.</string>
    <string name="more_btn">more</string>
    <string name="add_food_title">Add food</string>
    <string name="edit_food">Edit food</string>
    <string name="food_item_list_btn">Choose from list:</string>
    <string name="add_activity">Add Activity</string>
    <string name="challenges_notification_title">Did you update your challenges?</string>
    <string name="challenge_notification_msg">Don\'t forget to mark your progress!</string>
    <string name="food_item_details_start">\n(</string>
    <string name="food_item_details_comma">, <br /></string>
    <string name="food_item_details_kcal">kcal: <br /></string>
    <string name="food_item_details_carbs">carbs: <br /></string>
    <string name="food_item_details_protein">protein: <br /></string>
    <string name="food_item_details_fat">fat: <br /></string>
    <string name="food_item_details_end">)</string>
    <string name="total_kcal">Total kcal: <br/></string>
    <string name="total_carbs">Total carbs: <br/></string>
    <string name="percent">%</string>
    <string name="total_protein">Total protein: <br/></string>
    <string name="total_fat">Total fat: <br/></string>
    <string name="food_journal_empty_view_title">You haven\'t added any food items yet.</string>
    <string name="total_minutes">Total minutes: <br/></string>
    <string name="food_journal_empty_view_subtitle">Food for the current day can be added from specific challenges.</string>
    <string name="activity_empty_view_title">You haven\'t added any items yet.</string>
    <string name="activity_empty_view_subtitle">Add activities by clicking the button above.</string>
    <string name="total_percent">Total %: <br/></string>
    <string name="cups">cups: <br/></string>
    <string name="total_grams">Total grams: <br/></string>
</resources>