<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".goalsmeasurements.BmiActivity">

    <TextView
        android:id="@+id/bmi_info"
        style="@style/SecondaryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/bmi_info" />

    <LinearLayout
        android:id="@+id/height_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bmi_info"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/input_height"
            style="@style/MainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/height"
            android:hint="@string/height"
            android:inputType="number" />

        <TextView
            style="@style/MainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/centimeters" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/weight_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/height_container"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/input_weight"
            style="@style/MainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/weight"
            android:hint="@string/weight"
            android:inputType="numberDecimal" />

        <TextView
            style="@style/MainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kilos" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/result_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/calculate_btn"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <TextView
            style="@style/MainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi_result_intro" />

        <TextView
            android:id="@+id/result_textview"
            style="@style/MainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="23.3" />

    </LinearLayout>

    <TextView
        style="@style/SecondaryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_container"
        android:layout_margin="15dp"
        android:text="@string/bmi_ranges" />

    <Button
        android:id="@+id/calculate_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weight_container"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:text="@string/calculate_btn" />

    <include
        layout="@layout/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>

