<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".goalsmeasurements.BmrTeeActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/height_container"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:paddingHorizontal="20dp">

                <TextView
                    style="@style/Body1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/height_input_field"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/input_hint"
                    android:autofillHints="@string/input_hint"
                    android:id="@+id/input_height" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/weight_container"
                android:orientation="horizontal"
                android:layout_below="@id/height_container"
                android:layout_margin="10dp"
                android:paddingHorizontal="20dp">

                <TextView
                    style="@style/Body1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/weight_input_field"/>


                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/input_hint"
                    android:autofillHints="@string/input_hint"
                    android:id="@+id/input_weight" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/age_container"
                android:orientation="horizontal"
                android:layout_below="@id/weight_container"
                android:layout_margin="10dp"
                android:paddingHorizontal="20dp">

                <TextView
                    style="@style/Body1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/age_input_field"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/input_hint"
                    android:autofillHints="@string/input_hint"
                    android:id="@+id/input_age" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/gender_container"
                android:orientation="horizontal"
                android:layout_below="@id/age_container"
                android:layout_margin="10dp"
                android:paddingHorizontal="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_input_field"
                    style="@style/Body1"/>

                <RadioGroup
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender_female"
                        android:id="@+id/gender_female"
                        android:onClick="onRadioBtnClicked"
                        style="@style/Body1"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender_male"
                        android:id="@+id/gender_male"
                        android:onClick="onRadioBtnClicked"
                        style="@style/Body1"/>


                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/activity_container"
                android:orientation="horizontal"
                android:layout_below="@id/gender_container"
                android:layout_margin="10dp"
                android:paddingHorizontal="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_input_field"
                    style="@style/Body1"/>

                <Spinner
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/activity_spinner"/>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculate_btn"
                android:layout_below="@id/activity_container"
                android:id="@+id/calculate_btn"
                style="@style/ButtonPrimary"
                android:layout_margin="15dp"
                android:paddingHorizontal="10dp"
                android:layout_centerHorizontal="true"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:id="@+id/bmr_result_container"
                android:orientation="horizontal"
                android:layout_below="@id/calculate_btn"
                android:layout_margin="10dp"
                android:paddingHorizontal="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bmr_result_intro"
                    android:id="@+id/bmr_title_textview"
                    android:visibility="invisible"
                    style="@style/Headline5"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="23.3"
                    android:id="@+id/bmr_result_textview"
                    style="@style/Headline5"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:id="@+id/tee_result_container"
                android:orientation="horizontal"
                android:layout_below="@id/bmr_result_container"
                android:layout_margin="10dp"
                android:paddingHorizontal="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tee_title_textview"
                    android:text="@string/tee_result_intro"
                    android:visibility="invisible"
                    style="@style/Headline5"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="23.3"
                    android:id="@+id/tee_result_textview"
                    style="@style/Headline5"/>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <include
        layout="@layout/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>