<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChallengesActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/active_title"
                style="@style/Headline5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="10dp"
                android:text="@string/challenges_active"
                android:textAllCaps="true" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/active_challenges_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="70dp"
                tools:listitem="@layout/challenges_recyclerview_item"
                />

            <LinearLayout
                android:id="@+id/active_challenges_empty_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    style="@style/Headline6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/active_challenges_empty_view_title"
                    android:textAlignment="center" />

                <TextView
                    style="@style/Subtitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/active_challenges_empty_view_subtitle"
                    android:textAlignment="center" />

            </LinearLayout>

            <TextView
                android:id="@+id/completed_title"
                style="@style/Headline5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="10dp"
                android:text="@string/challenges_completed"
                android:textAllCaps="true" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/completed_challenges_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="70dp"
                tools:listitem="@layout/challenges_recyclerview_item" />

            <LinearLayout
                android:id="@+id/completed_challenges_empty_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="70dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/completed_challenges_empty_view_title"
                    style="@style/Headline6"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    style="@style/Subtitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/completed_challenges_empty_view_subtitle"
                    android:textAlignment="center" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="80dp"
        android:src="@drawable/ic_action_add" />

    <include
        layout="@layout/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>